Src/Gateways/WebApi-Gateway/_kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: medifii
spec:
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: medifii/api-gateway:v1
          ports:
            - containerPort: 8080
