Src/Gateways/WebApi-Gateway/_kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: medifii
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: api-gateway
