Src/Gateways/WebApi-Gateway/_kube/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: api-gateway
  namespace: medifii
spec:
  rules:
    - host: www.medifii.local
      http:
        paths:
          - backend:
              serviceName: api-gateway
              servicePort: 80
            path: /
